--- a/workflows.yml
+++ b/workflows.yml
@@ -3,7 +3,7 @@
 # See VersionFlavor in the script to see how stabl/release/devel/devel_release
 # are defined.
 
-disabled-software:
+software:
     #############################
     # Charybdis family:
     charybdis:
@@ -15,6 +15,7 @@ disabled-software:
             devel: null
             devel_release: null
         path: charybdis
+        separate_build_job: true
         build_script: |
             cd $GITHUB_WORKSPACE/charybdis/
             ./autogen.sh
@@ -33,6 +34,7 @@ disabled-software:
             devel: main
             devel_release: null
         path: solanum
+        separate_build_job: true
         build_script: |
             cd $GITHUB_WORKSPACE/solanum/
             ./autogen.sh
@@ -57,6 +59,7 @@ disabled-software:
               with:
                   go-version: '~1.16'
             - run: go version
+        separate_build_job: true
         build_script: |
             cd $GITHUB_WORKSPACE/ergo/
             make build
@@ -76,6 +79,7 @@ disabled-software:
         path: inspircd
         prefix: ~/.local/inspircd
         cache: false  # incremental compilation is frequently broken
+        separate_build_job: true
         build_script: &inspircd_build_script |
             cd $GITHUB_WORKSPACE/inspircd/
             patch src/inspircd.cpp < $GITHUB_WORKSPACE/inspircd_mainloop.patch
@@ -93,6 +97,7 @@ disabled-software:
             devel_release: null
         path: unrealircd
         prefix: ~/.local/unrealircd
+        separate_build_job: true
         build_script: &unrealircd_build_script |
             cd $GITHUB_WORKSPACE/unrealircd/
             cp $GITHUB_WORKSPACE/data/unreal/* .
@@ -100,12 +105,12 @@ disabled-software:
             make -j 4
             make install
 
-software:
     #############################
     # Clients:
 
     limnoria:
         name: Limnoria
+        separate_build_job: false
         install_steps:
             stable:
                 - name: Install dependencies
@@ -120,6 +125,7 @@ software:
 
     sopel:
         name: Sopel
+        separate_build_job: false
         install_steps:
             stable:
                 - name: Install dependencies
@@ -132,7 +138,7 @@ software:
                   run: pip install git+https://github.com/sopel-irc/sopel.git
             devel_release: null
 
-disabled-tests:
+tests:
     charybdis:
         software: [charybdis]
 
@@ -154,7 +160,6 @@ disabled-tests:
     unrealircd-anope:
         software: [unrealircd, anope]
 
-tests:
     limnoria:
         software: [limnoria]
 
