--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Create directories
-      run: cd ~/; mkdir .local/ go/
+      run: cd ~/; mkdir -p .local/ go/
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -98,11 +98,6 @@ jobs:
         path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -135,11 +130,6 @@ jobs:
         path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -172,11 +162,6 @@ jobs:
         path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -209,11 +194,6 @@ jobs:
         path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -238,11 +218,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -275,11 +250,6 @@ jobs:
         path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -304,11 +274,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -341,11 +306,6 @@ jobs:
         path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -378,11 +338,6 @@ jobs:
         path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
