--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Create directories
-      run: cd ~/; mkdir .local/ go/
+      run: cd ~/; mkdir -p .local/ go/
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
@@ -73,7 +73,7 @@ jobs:
         go-version: ~1.16
     - run: go version
     - name: Create directories
-      run: cd ~/; mkdir .local/ go/
+      run: cd ~/; mkdir -p .local/ go/
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
@@ -109,7 +109,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Create directories
-      run: cd ~/; mkdir .local/ go/
+      run: cd ~/; mkdir -p .local/ go/
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -140,7 +140,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Create directories
-      run: cd ~/; mkdir .local/ go/
+      run: cd ~/; mkdir -p .local/ go/
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
@@ -178,7 +178,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Create directories
-      run: cd ~/; mkdir .local/ go/
+      run: cd ~/; mkdir -p .local/ go/
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
@@ -252,11 +252,6 @@ jobs:
         path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -289,11 +284,6 @@ jobs:
         path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -326,11 +316,6 @@ jobs:
         path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -363,11 +348,6 @@ jobs:
         path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -392,11 +372,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -429,11 +404,6 @@ jobs:
         path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -458,11 +428,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -495,11 +460,6 @@ jobs:
         path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -532,11 +492,6 @@ jobs:
         path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
-    - name: look at downloads
-      run: |-
-        ls -la ~
-        ls -la ~/.local
-        ls -la ~/.local/bin
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
