--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -6,6 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Create directories
+      run: cd ~/; mkdir -p .local/ go/
     - name: Checkout Anope
       uses: actions/checkout@v2
       with:
